tests/parser-test-files/bad-files/define-alias.2.error
error: Invalid alias variable
  --> test:4:14
   |
 4 |  (define-alias "Wow")
   |                ^^^^^ expected identifier.
