tests/parser-test-files/bad-files/define-alias.2.coal
;; BAD: Invalid define alias - string instead of alias name
(package test-package)

(define-alias "Wow")
